# PROFFIT

./: CMakeLists.txt  Makefile  README.md  bknpow.h  io.h  proffit.cpp
proffit_1.5_autoconf/: ._fakeit.h  ._fitting.h  ._help.h  ._io.h  ._miscellaneous.h  ._proffit.C  ._psf.h  ._sbprofs.h  ._voronoi.h  Makefile  Makefile.in  README  fakeit.h  fitting.h  help.h  io.h  makeisdc1
proffit_1.5_autoconf/ac_stuff/: Makefile  configure  configure.in  configure_macports
proffit_1.5_cmake/: CMakeLists.txt  README  changelog.txt  miscellaneous.h  models.h  proffit.cpp  psf.h  voronoi.h
proffit_1.5_multinest/: CMakeLists.txt  Makefile  help.h  io.h  nested_sampling.h  proffit.cpp  psf.h  sbprofs.h
